client/components/post-card/style.scss
.post-card__site-info-title {
	color: $gray;
	float: left;
	width: 100%;
}

.has-image .post-card__site-info-title {
	width: calc( 100% - 120px );
}

.post-card__site-info {
	color: $gray;
	display: block;
	font-size: 13px;
	margin-right: 120px;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	width: 100%;

	&:visited {
		color: inherit;
	}

	.site-icon {
		align-self: auto;
		display: inline-block;
		margin-right: 4px;
	}

	.post-card__site-title {
		color: $gray;
		vertical-align: top;
	}
}

.post-card__title {
	float: left;
	line-height: 1.2;
	margin-top: 9px;
	width: 98%;
}

.post-card__anchor {
	color: $gray-dark;
	font-size: 15px;
	font-weight: 600;
	line-height: 1.4;
	@extend %content-font;

	&:visited {
		color: $gray-dark;
	}

	&:hover {
		color: $blue-wordpress;
	}
}

.post-card__thumbnail {
	border-radius: 2px;
	clear: right;
	float: right;
	max-height: 68px;
	max-width: 96px;
}

